--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -1,16 +1,15 @@
 name: zdm_crawler
 
-on:
-  #将下面两行代码取消注释
-  #schedule:
-    #- cron: "0/15 * * * *"
+于:
+ schedule:
+    - cron: "0 * * * *"  # 这里的 0 * * * * 代表每小时的 0分 触发一次
   workflow_dispatch:
     inputs:
       # 这个是手动触发工作流界面上的选项, 选择True时,即使未满足COMMIT_THRESHOLD提交阈值,也会生成提交记录
       should_commit:
         description: '立即生成提交记录'
-        type: boolean
-        default: False
+        输入: boolean
+        默认: False
 
 jobs:
   build:
